--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Dja Vue | Test</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/uikit.min.css">
+	<link rel="stylesheet" type="text/css" href="./static/css/dashboard.css">
 	<script src="./static/js/uikit.min.js"></script>
 </head>
 <body>
+	
 	<div id="app"></div>
 
 	<script src="./static/js/vue.min.js"></script>
