--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Dja Vue | Test</title>
+	<title>Vue JS | Test</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/dashboard.css">
-	<script src="./static/js/uikit.min.js"></script>
 </head>
 <body>
 	
 	<div id="app"></div>
 
+	<script src="./static/js/uikit.min.js"></script>
+	<script src="./static/js/uikit-icons.min.js"></script>
+	<script src="./static/js/Chart.min.js"></script>
 	<script src="./static/js/vue.min.js"></script>
 	<script src="./static/js/vue-router.js"></script>
-	<script src="./static/js/vue-resource.min.js"></script>
 	<script src="./static/js/httpVueLoader.js"></script>
 	<script src="./src/main.js"></script>
 	
 </body>
 </html>
+<!-- <script src="./static/js/vue-resource.min.js"></script> -->
