--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="./static/js/vue.min.js"></script>
 	<script src="./static/js/vue-router.js"></script>
 	<script src="./static/js/httpVueLoader.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/accounting.js/0.4.1/accounting.min.js"></script>
 	<script src="./src/main.js"></script>
 	
 </body>
