--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 	<div id="app"></div>
 
+	<script src="./src/apa.json"></script>
 	<script src="./static/js/uikit.min.js"></script>
 	<script src="./static/js/uikit-icons.min.js"></script>
 	<script src="./static/js/Chart.min.js"></script>
@@ -18,6 +19,7 @@
 	<script src="./static/js/httpVueLoader.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/accounting.js/0.4.1/accounting.min.js"></script>
 	<script src="./src/main.js"></script>
+
 	
 </body>
 </html>
