--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	
 	<div id="app"></div>
 
-	<script src="./src/apa.json"></script>
 	<script src="./static/js/uikit.min.js"></script>
 	<script src="./static/js/uikit-icons.min.js"></script>
 	<script src="./static/js/Chart.min.js"></script>
 	<script src="./static/js/vue.min.js"></script>
 	<script src="./static/js/vue-router.js"></script>
 	<script src="./static/js/httpVueLoader.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/accounting.js/0.4.1/accounting.min.js"></script>
+	<script src="./static/js/accounting.min.js"></script>
+	<script src="./static/js/moment.min.js"></script>
 	<script src="./src/main.js"></script>
 
 	
